--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start:api": "nest start api --watch",
+    "start:api": "NODE_ENV=dev nest start api --watch",
     "start:api:prod": "node dist/apps/api/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --coverage",
@@ -19,11 +19,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.7.8",
     "@squareboat/nest-console": "0.0.3",
     "@types/lodash": "^4.14.165",
+    "dotenv-flow": "^3.2.0",
     "lodash": "^4.17.20",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
