--- a/package.json
+++ b/package.json
@@ -1,58 +1,20 @@
 {
-  "name": "node-folder-content",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "node-ls",
+  "version": "1.0.0",
   "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start:api": "NODE_ENV=dev nest start api --watch",
-    "start:api:prod": "node dist/apps/api/src/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --coverage",
-    "test:unit": "jest --group=-e2e",
-    "test:unit:watch": "jest --group=-e2e --watch",
-    "test:e2e": "jest --group=e2e"
-  },
-  "dependencies": {
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/config": "^0.6.1",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/platform-express": "^7.5.1",
-    "@nestjs/swagger": "^4.7.8",
-    "@squareboat/nest-console": "0.0.3",
-    "@types/lodash": "^4.14.165",
-    "dotenv-flow": "^3.2.0",
-    "lodash": "^4.17.20",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "swagger-ui-express": "^4.1.6"
-  },
+  "license": "MIT",
+  "workspaces": [
+    "apps/*",
+    "libs/*"
+  ],
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "7.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.6.3",
-    "jest-runner-groups": "^2.0.1",
-    "prettier": "^2.1.2",
-    "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "lerna": "^3.22.1",
+    "prettier": "^2.0.5",
+    "monorepo-run": "^0.4.2"
+  },
+  "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "build": "node --max-old-space-size=1900 ./node_modules/.bin/lerna run build",
+    "start": "mono-run start --stream 500"
   }
 }
