--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,11 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "paths": {
-      "@node-ls/core": [
-        "libs/core/src"
-      ]
-    }
-  }
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {}
+  },
+  "types": [
+    "node",
+  ]
 }
