--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/cli"
+    "outDir": "./dist"
   },
   "include": [
     "src/**/*",
