--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,20 +5,22 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
     "start": "NODE_ENV=dev nest start api --watch",
     "start:prod": "node dist/apps/api/src/main",
     "test": "jest --coverage",
     "test:unit": "jest --group=-e2e",
-    "test:e2e": "jest --group=e2e"
+    "test:e2e": "jest --group=e2e",
+    "build": "nest build && yarn copy-to-dist",
+    "copy-to-dist": "recursive-copy dist ../../dist/apps/api -w"
   },
   "dependencies": {
-    "@node-ls/core": "1.0.0",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.7.8",
+    "@node-ls/core": "1.0.0",
+    "class-validator": "^0.12.2",
     "dotenv-flow": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -61,7 +63,7 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
     "setupFiles": [
-      "./test-setup.ts"
+      "./src/test-setup.ts"
     ]
   }
 }
