--- a/libs/core/tsconfig.json
+++ b/libs/core/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "declaration": false,
-    "outDir": "../../dist/libs/core"
+    "declaration": true,
+    "outDir": "./dist"
   },
   "include": [
     "src/**/*"
