--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,9 +13,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.7",
+    "dayjs": "^1.9.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "3.4.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -23,7 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && yarn copy-to-dist",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage --watchAll=false",
+    "test:watch": "react-scripts test",
     "eject": "react-scripts eject",
     "copy-to-dist": "recursive-copy build ../../dist/apps/web/build -w"
   },
