--- a/docker/Dockerfile_frontend
+++ b/docker/Dockerfile_frontend
@@ -6,7 +6,7 @@ RUN yarn bootstrap
 RUN yarn build
 
 FROM nginx:1.16.0-alpine
-COPY --from=build /app/dist/apps/web/build /usr/share/nginx/html
+COPY --from=build /app/apps/web/build /usr/share/nginx/html
 RUN ls -lar /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
